[package]
name = "zkevm_circuits"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2"
serde = { version = "1", features = ["derive"] }
rand = "0.4"
smallvec = { version = "*", features = [
    "const_generics",
    "const_new",
    "serde",
] }
arrayvec = "0.7"
zkevm_opcode_defs = {git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", branch = "v1.3.2"}
boojum = {git = "https://github.com/matter-labs/era-boojum.git", branch = "main"}
# boojum = { path = "../boojum" }
bincode = "*"
cs_derive = { git = "https://github.com/matter-labs/era-boojum.git", branch = "main" }
# cs_derive = { path = "../boojum/cs_derive" }
serde_json = "*"
itertools = "0.10"
rand_new = { package = "rand", version = "0.8" }
hex = "*"

[features]
default = []
log_tracing = ["boojum/log_tracing"]
verbose_circuits = []

[dev-dependencies]
hex = "*"
