[package]
name = "cs_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.*", features = ["extra-traits", "printing"]}
quote = {version = "1.0.*"}
proc-macro2 = "1"
proc-macro-error = "1"

[lib]
proc-macro = true